# neural-commons

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DECISIONS.md  LICENSE  NC_Decision_Log.md  NC_System_Architecture.md  README.md  ROADMAP.md  SECURITY.md  SOUL.md  aegis-ctl  aegis.service  aegis_full_map.html  d24_analysis.html  flow-map.html
.aegis/config/: config.toml
.claude/commands/: adapter-state.md  check-wiring.md  trace-request.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: auto-release.yml  ci.yml  release.yml
adapter/aegis-adapter/: Cargo.toml
adapter/aegis-adapter/src/: config.rs  gateway_client.rs  gateway_wss.rs  gateway_wss_handler.rs  hooks.rs  lib.rs  mode.rs  replay.rs  server.rs  state.rs  webhook.rs
adapter/aegis-adapter/src/autonomous/: harvest.rs  heartbeat.rs  inbox.rs  mod.rs  state.rs  sync.rs  types.rs  vote.rs
adapter/aegis-adapter/tests/: autonomous_tests.rs
adapter/aegis-barrier/: Cargo.toml
adapter/aegis-barrier/src/: diff.rs  evolution.rs  lib.rs  manifest.rs  protected_files.rs  registry.rs  severity.rs  snapshot.rs  types.rs  watcher.rs  write_token.rs
adapter/aegis-cli/: Cargo.toml
adapter/aegis-cli/src/: backup.rs  botawiki_cmd.rs  cluster_setup.rs  main.rs  mesh_cmd.rs  trace.rs  trustmark_cmd.rs
adapter/aegis-dashboard/: Cargo.toml
adapter/aegis-dashboard/src/: assets.rs  lib.rs  routes.rs  traffic.rs
adapter/aegis-evidence/: Cargo.toml
adapter/aegis-evidence/src/: chain.rs  lib.rs  merkle.rs  recorder.rs  store.rs
adapter/aegis-failure/: Cargo.toml
adapter/aegis-failure/src/: anomaly.rs  heartbeat.rs  lib.rs  rollback.rs
adapter/aegis-memory/: Cargo.toml
adapter/aegis-memory/src/: config.rs  interception.rs  lib.rs  monitor.rs  screen.rs
adapter/aegis-proxy/: Cargo.toml
adapter/aegis-proxy/src/: anthropic.rs  channel_trust.rs  cognitive_bridge.rs  config.rs  error.rs  lib.rs  middleware.rs  ner_pii.rs  pipeline.rs  proxy.rs  rate_limit.rs  response_screen.rs  trust_policy.rs
adapter/aegis-proxy/tests/: ner_distilbert_test.rs  ner_false_positives.rs  ner_stress_test.rs
adapter/aegis-slm/: Cargo.toml
adapter/aegis-slm/src/: hardware.rs  holster.rs  lib.rs  loopback.rs  metaprompt.rs  parser.rs  prompt.rs  scoring.rs  types.rs
adapter/aegis-slm/src/engine/: anthropic.rs  heuristic.rs  mod.rs  ollama.rs  openai_compat.rs  prompt_guard.rs
adapter/aegis-slm/tests/: adversarial_test.rs  claude_benchmark_test.rs  model_comparison.rs  multipass_test.rs  prompt_guard_live.rs  prompt_tuning_test.rs  slm_value_test.rs  threat_model_test.rs
adapter/aegis-vault/: Cargo.toml
adapter/aegis-vault/src/: kdf.rs  lib.rs  policy.rs  scanner.rs  storage.rs
adapter/install/: install.sh
aegis-crypto/: Cargo.toml
aegis-crypto/src/: aes256gcm.rs  bip39.rs  ed25519.rs  lib.rs  rfc8785.rs  sha256.rs  x25519.rs
aegis-schemas/: Cargo.toml  build.rs
aegis-schemas/src/: basis_points.rs  claim.rs  config.rs  enterprise.rs  lib.rs  receipt.rs  trustmark.rs
aegis-schemas/tests/: config_tests.rs  receipt_enforcement_mode_test.rs
benchmarks/screening/: README.md  aegis_74_validation.jsonl  blind_validation_cases.json  blind_validation_test.py  e2e_cascade_test.py  e2e_test_cases.json  pint_style_benchmark.py  results_abcd_strategies.json  results_e2e_121.json  results_pint_v3.json
cluster/botawiki/: Cargo.toml
cluster/botawiki/src/: dispute.rs  lib.rs  main.rs  quarantine.rs  read.rs  storage.rs  write.rs
cluster/botawiki/tests/: storage_tests.rs
cluster/broadcast/: Cargo.toml
cluster/broadcast/src/: lib.rs  policy.rs  receive.rs  send.rs
cluster/common/: Cargo.toml
cluster/common/src/: bundle.rs  db.rs  lib.rs  nats.rs
cluster/evaluator/: Cargo.toml
cluster/evaluator/src/: accountability.rs  attestation.rs  lib.rs  selection.rs  voting.rs
cluster/gateway/: Cargo.toml  config.toml
cluster/gateway/src/: auth.rs  botawiki.rs  embedding_pool.rs  evaluator.rs  evidence_verify.rs  lib.rs  main.rs  mesh_routes.rs  nats_bridge.rs  rate_limit.rs  routes.rs  session_gate.rs  store.rs  ws.rs
cluster/gateway/tests/: security_tests.rs
cluster/ledger/: Cargo.toml
cluster/ledger/src/: balance.rs  circuit_breaker.rs  lib.rs  yield_calc.rs
cluster/mesh/: Cargo.toml
cluster/mesh/src/: dead_drop.rs  lib.rs  main.rs  relay.rs  routing.rs  sanitization.rs  screening.rs
cluster/mesh/tests/: relay_integration_tests.rs  screening_tests.rs
cluster/operator/: Cargo.toml
cluster/operator/src/: main.rs
cluster/rag/: Cargo.toml
cluster/rag/src/: lib.rs  search.rs  storage.rs
cluster/scheduler/: Cargo.toml  config.toml
cluster/scheduler/src/: lib.rs  registry.rs  router.rs
cluster/trustmark/: Cargo.toml
cluster/trustmark/examples/: trustmark_demo.rs
cluster/trustmark/src/: cluster_scoring.rs  decay.rs  gate.rs  gather.rs  lib.rs  main.rs  persist.rs  scoring.rs  tiers.rs
cluster/trustmark/tests/: cluster_scoring_tests.rs
docs/: AEGIS_PITCH_DECK.md  GAP_ANALYSIS.md  OPENCLAW_INTEGRATION.md  QUICKSTART.md  WHY_INSTALL_AEGIS.md
docs/architecture/: CLUSTER_IMPLEMENTATION_PLAN.md  NC_System_Architecture.md  REQUEST_LIFECYCLE.md  TRUSTMARK_SCORING.md
docs/decisions/: D35_node_redistribution.md
docs/diagrams/: 02_protection_data_flow.mermaid
docs/tier1/: TIER1_DECISIONS.md  TIER1_DEFERRALS_AND_ROADMAP.md  Tier1_Implementation_Plan_FINAL.md
docs/visualizations/: d11_example.html
infra/: docker-compose.yml
infra/minio/: dead_drop_lifecycle.md
infra/nats/: NATS_TOPOLOGY.md  nats-server.conf
infra/postgres/: init.sql
infra/prometheus/: prometheus.yml
install/: aegis-update  install.sh
ml/centaur/: README.md
ml/embedding/: main.py  requirements.txt
schemas/: receipt.proto
tests/: e2e_full.sh  e2e_openclaw.sh  mock_upstream.py  openclaw_integration_test.sh  proxy_test.sh  trace_e2e.sh
tests/contract/: Cargo.toml
tests/contract/src/: lib.rs
tests/http/: Cargo.toml
tests/http/src/: lib.rs
tests/integration/: Cargo.toml
tests/integration/src/: lib.rs
(+35 files in other folders)
