[workspace]
resolver = "2"
members = [
    "aegis-crypto",
    "aegis-schemas",
    "adapter/aegis-proxy",
    "adapter/aegis-evidence",
    "adapter/aegis-barrier",
    "adapter/aegis-memory",
    "adapter/aegis-slm",
    "adapter/aegis-vault",
    "adapter/aegis-failure",
    "adapter/aegis-dashboard",
    "adapter/aegis-cli",
    "adapter/aegis-adapter",
    "cluster/gateway",
    "cluster/trustmark",
    "cluster/botawiki",
    "cluster/mesh",
    "cluster/evaluator",
    "cluster/scheduler",
    "cluster/ledger",
    "cluster/rag",
    "cluster/broadcast",
    "cluster/operator",
    "cluster/common",
    "tests/contract",
    "tests/integration",
    "tests/http",
]

[workspace.package]
version = "0.2.12"
edition = "2024"
license = "AGPL-3.0-or-later"
repository = "https://github.com/neural-commons/neural-commons"

[workspace.dependencies]
# Crypto
ed25519-dalek = { version = "2", features = ["serde", "rand_core"] }
x25519-dalek = { version = "2", features = ["serde"] }
sha2 = "0.10"
aes-gcm = "0.10"
hkdf = "0.12"
bip39 = "2"
rand = "0.8"
rand_core = "0.6"
hmac = "0.12"
hex = "0.4"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
prost = "0.13"
prost-types = "0.13"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP / Proxy
axum = { version = "0.8", features = ["ws"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace", "limit"] }
hyper = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream", "blocking"] }

# NATS
async-nats = "0.38"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "json", "uuid", "chrono"] }

# CLI
clap = { version = "4", features = ["derive"] }

# P2P
libp2p = { version = "0.54", features = ["noise", "yamux", "tcp", "dns", "relay", "identify", "kad"] }

# Regex
regex = "1"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
prometheus-client = "0.23"

# Testing
tempfile = "3"

# Error handling
thiserror = "2"
anyhow = "1"

# Config
toml = "0.8"
notify = "7"
