[package]
name = "aegis-adapter"
description = "Main adapter library: composes proxy, evidence, barrier, memory, SLM, vault, failure, dashboard"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
prompt-guard = ["aegis-slm/prompt-guard"]

[dependencies]
aegis-crypto = { path = "../../aegis-crypto" }
aegis-schemas = { path = "../../aegis-schemas" }
aegis-proxy = { path = "../aegis-proxy" }
aegis-evidence = { path = "../aegis-evidence" }
aegis-barrier = { path = "../aegis-barrier" }
aegis-memory = { path = "../aegis-memory" }
aegis-slm = { path = "../aegis-slm" }
aegis-vault = { path = "../aegis-vault" }
aegis-failure = { path = "../aegis-failure" }
aegis-dashboard = { path = "../aegis-dashboard" }
aegis-trustmark = { path = "../../cluster/trustmark" }
ed25519-dalek.workspace = true
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml.workspace = true
anyhow.workspace = true
rand.workspace = true
hex.workspace = true
notify.workspace = true
reqwest.workspace = true

[dev-dependencies]
tempfile.workspace = true
