[package]
name = "aegis-barrier"
description = "Write barrier: filesystem watcher, diff engine, severity classifier (warn-only default)"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
aegis-crypto = { path = "../../aegis-crypto" }
aegis-schemas = { path = "../../aegis-schemas" }
aegis-evidence = { path = "../aegis-evidence" }
notify.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
hex.workspace = true
rand.workspace = true

[dev-dependencies]
tempfile.workspace = true
