[package]
name = "aegis-dashboard"
description = "Embedded dashboard: inline HTML/CSS/JS, 6 tabs, less than 50KB total"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
aegis-evidence = { path = "../aegis-evidence" }
aegis-schemas = { path = "../../aegis-schemas" }
