[package]
name = "aegis-evidence"
description = "Evidence recorder: receipt chain, hash linking, Merkle rollup, SQLite storage"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
aegis-crypto = { path = "../../aegis-crypto" }
aegis-schemas = { path = "../../aegis-schemas" }
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
sha2.workspace = true
hex.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
