[package]
name = "aegis-failure"
description = "Failure detection: heartbeat monitor, anomaly threshold engine, rollback suggestions"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
aegis-schemas = { path = "../../aegis-schemas" }
aegis-evidence = { path = "../aegis-evidence" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
chrono.workspace = true
