[package]
name = "aegis-proxy"
description = "HTTP/WS/SSE transparent proxy with tower middleware (axum)"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
aegis-crypto = { path = "../../aegis-crypto" }
aegis-schemas = { path = "../../aegis-schemas" }
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
hyper.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
uuid.workspace = true
reqwest.workspace = true
hex.workspace = true
sha2 = "0.10"
ed25519-dalek.workspace = true
tokio-stream = "0.1"
bytes = "1"
regex = "1"
ort = { workspace = true, optional = true }
tokenizers = { workspace = true, optional = true }

[features]
default = ["ner"]
ner = ["dep:ort", "dep:tokenizers"]
