[package]
name = "aegis-slm"
description = "SLM loopback + holster: prompt injection detection, structured output parsing"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
aegis-schemas = { path = "../../aegis-schemas" }
regex.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
