[package]
name = "aegis-vault"
description = "Credential vault: plaintext scanning, encrypted storage, per-tool access policy"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
aegis-crypto = { path = "../../aegis-crypto" }
aegis-schemas = { path = "../../aegis-schemas" }
aegis-evidence = { path = "../aegis-evidence" }
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
hkdf.workspace = true
sha2.workspace = true
hex.workspace = true
rand.workspace = true
regex = "1"

[dev-dependencies]
tempfile.workspace = true
