[package]
name = "aegis-broadcast"
description = "Emergency broadcast: Foundation-signed messages, policy distribution"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
aegis-crypto = { path = "../../aegis-crypto" }
aegis-schemas = { path = "../../aegis-schemas" }
aegis-common = { path = "../common" }
async-nats.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
