[package]
name = "aegis-ledger"
description = "Compute credit ledger: yield calculator, balance tracker, circuit breaker"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
aegis-schemas = { path = "../../aegis-schemas" }
aegis-common = { path = "../common" }
sqlx.workspace = true
async-nats.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
chrono.workspace = true
