[package]
name = "aegis-operator"
description = "Operator admin CLI: nc status/drain-node/rotate-keys/export-backup/quarantine/broadcast/stats"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "nc"
path = "src/main.rs"

[dependencies]
aegis-crypto = { path = "../../aegis-crypto" }
aegis-schemas = { path = "../../aegis-schemas" }
aegis-common = { path = "../common" }
clap.workspace = true
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
