[package]
name = "aegis-scheduler"
description = "GPU scheduler: model registry, request router, on-demand Centaur loading"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
aegis-schemas = { path = "../../aegis-schemas" }
aegis-common = { path = "../common" }
axum.workspace = true
async-nats.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
