[package]
name = "aegis-contract-tests"
description = "Layer 1: Schema contract tests — round-trip, canonicalization, D1/D2 compliance (<30s)"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
aegis-crypto = { path = "../../aegis-crypto" }
aegis-schemas = { path = "../../aegis-schemas" }
ed25519-dalek = { workspace = true }
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
hex = "0.4"

[dev-dependencies]
tempfile.workspace = true
