[package]
name = "aegis-http-tests"
description = "Layer 3: HTTP contract tests — axum TestClient, no real server (<15s)"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
aegis-crypto = { path = "../../aegis-crypto" }
aegis-schemas = { path = "../../aegis-schemas" }
axum.workspace = true
tower.workspace = true
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
hyper.workspace = true
uuid.workspace = true
chrono.workspace = true
